Temp z-index fix

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -41,3 +41,10 @@
 .otherControls {
   flex-grow: 0
 }
+
+
+
+.editorSection {
+  z-index: 200;
+  position: relative;
+}
